<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_contatos"
        android:id="@+id/btContatos"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_foto"
        android:id="@+id/btFotos"
        android:layout_below="@+id/btContatos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="101dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_mapas"
        android:id="@+id/btMapas"
        android:layout_alignTop="@+id/btFotos"
        android:layout_alignRight="@+id/btContatos"
        android:layout_alignEnd="@+id/btContatos" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_restaurantes"
        android:id="@+id/btRestaurantes"
        android:layout_below="@+id/btFotos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_rota"
        android:id="@+id/btRota"
        android:layout_below="@+id/btRestaurantes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_intent"
        android:id="@+id/btIntent"
        android:layout_alignTop="@+id/btRota"
        android:layout_alignRight="@+id/btMapas"
        android:layout_alignEnd="@+id/btMapas" />

</RelativeLayout>
